// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown markdown links it renders the expected content containing a link 1`] = `
<ReactMarkdown
  astPlugins={Array []}
  data-test-subj="markdown"
  escapeHtml={true}
  linkTarget="_blank"
  parserOptions={Object {}}
  plugins={Array []}
  rawSourcePos={false}
  renderers={
    Object {
      "blockquote": [Function],
      "link": [Function],
      "root": [Function],
      "table": [Function],
      "tableCell": [Function],
      "tableHead": [Function],
      "tableRow": [Function],
    }
  }
  skipHtml={false}
  source="A link to an external site [External Site](https://google.com)"
  sourcePos={false}
  transformLinkUri={[Function]}
/>
`;

exports[`Markdown markdown tables it renders the expected table content 1`] = `
<ReactMarkdown
  astPlugins={Array []}
  data-test-subj="markdown"
  escapeHtml={true}
  linkTarget="_blank"
  parserOptions={Object {}}
  plugins={Array []}
  rawSourcePos={false}
  renderers={
    Object {
      "blockquote": [Function],
      "link": [Function],
      "root": [Function],
      "table": [Function],
      "tableCell": [Function],
      "tableHead": [Function],
      "tableRow": [Function],
    }
  }
  skipHtml={false}
  source="| we | support | markdown | tables |
|---------|---------|------------|--------|
| because | tables  | are        | pretty |
| useful  | for     | formatting | data   |"
  sourcePos={false}
  transformLinkUri={[Function]}
/>
`;
